Switched to robust and supported Base64 encoding method